<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="Data_Received" Id="{13897025-bea0-4cc8-8e0c-068240beba2b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stTempData				: ST_TemperatureStructure;	// this is the structured data we will update from the MQTT client
	sJSonStringReceived		: STRING(255);				// this is the latest JSON formatted data string we have recieved
	sPlainStringReceived	: STRING(255);				// this is the latest plain string we have received
	
	// Count the messages sent
	uiJSONReceived				: UINT;
	uiJSONProcessed				: UINT;


	uiPlainReceived				: UINT;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>